# hebbmem

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-check.yml
assets/: README.md
benchmarks/: README.md  baseline.py  metrics.py  run_benchmark.py  runner.py
benchmarks/locomo/: README.md  benchmark.py  download.py  loader.py
benchmarks/scenarios/: associative.py  contradiction.py  noise.py  temporal.py
demo/: README.md  sample_data.py  server.py  visualization.html
examples/: agent_integration.py  basic_usage.py  custom_config.py
examples/integrations/: README.md
examples/integrations/crewai_team/: README.md  requirements.txt  team.py
examples/integrations/langchain_agent/: README.md  agent.py  requirements.txt
examples/integrations/ollama_chat/: README.md  chat.py  requirements.txt
examples/integrations/openai_assistant/: README.md  assistant.py  requirements.txt
examples/integrations/smolagents_tool/: README.md  agent.py  requirements.txt
scripts/: generate_assets.py
src/hebbmem/: __init__.py  encoders.py  exceptions.py  graph.py  memory.py  node.py  persistence.py  types.py
tests/: conftest.py  test_batch.py  test_encoders.py  test_exceptions.py  test_graph.py  test_integration.py  test_memory.py  test_node.py  test_persistence.py  test_thread_safety.py
