[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hebbmem"
version = "0.1.0"
description = "Hebbian memory for AI agents — memories that fire together wire together."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "An", email = "an@codepawl.dev" }]
keywords = ["ai", "agent", "memory", "hebbian", "neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/codepawl/hebbmem"
Repository = "https://github.com/codepawl/hebbmem"
Issues = "https://github.com/codepawl/hebbmem/issues"

[tool.hatch.build]
exclude = [".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/hebbmem"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["hebbmem"]
